--- a/.github/workflows/reset-search-count.yml
+++ b/.github/workflows/reset-search-count.yml
@@ -11,20 +11,21 @@ jobs:
   reset-count:
     runs-on: ubuntu-latest
     steps:
-      - name: Call Reset Function
+      - name: Call Database Function Directly
         run: |
-          echo "Attempting to reset daily search count..."
+          echo "Attempting to reset daily search count via REST API..."
           
-          # 認証なしでシンプルに実行
-          response=$(curl -s -X POST "https://pmjdyztlqovnqjwavbpb.functions.supabase.co/reset-daily-search-count" \
-            -H "Content-Type: application/json" \
-            -d '{}')
+          # Supabase REST API を直接呼び出す
+          response=$(curl -s -X POST "https://pmjdyztlqovnqjwavbpb.supabase.co/rest/v1/rpc/reset_daily_search_count" \
+            -H "apikey: ${{ secrets.SUPABASE_ANON_KEY }}" \
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_ANON_KEY }}" \
+            -H "Content-Type: application/json")
           
           echo "Response: $response"
           
-          # レスポンスから成功かどうかを判断
-          if echo "$response" | grep -q "success.*true"; then
-            echo "✅ Successfully reset daily search count"
+          # レスポンスにエラーがないか確認
+          if [[ "$response" == +([0-9]) ]] || echo "$response" | grep -q -v "error"; then
+            echo "✅ Successfully reset daily search count. Count: $response"
             exit 0
           else
             echo "❌ Failed to reset daily search count: $response"
